# django-pgactivity

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  README.rst  environment.yml  footing.yaml  manage.py  mkdocs.yml  pyproject.toml  settings.py  setup.cfg  tox.ini
docs/: Makefile  command.md  command.rst  conf.py  context.md  context.rst  contributing.md  index.md  index.rst  installation.md  installation.rst  module.md  module.rst  proxy.md  proxy.rst  release_notes.md  requirements.txt  settings.md  settings.rst  timeout.md  timeout.rst  toc.rst  usage.rst
pgactivity/: __init__.py  config.py  contrib.py  core.py  middleware.py  models.py  runtime.py  utils.py  version.py
pgactivity/management/commands/: pgactivity.py
pgactivity/tests/: test_config.py  test_contrib.py  test_core.py  test_management.py  test_middleware.py  urls.py
